<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Misc-->
    <string name="app_name">SSF Companion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="unable_to_compose_email">Unable to compose email</string>
    <string name="unable_to_view_site">Unable to view site</string>

    <!--Email addresses, URLs, etc-->
    <string name="advise_a_student_email_subject">Advise-A-Student Program - Request for Help</string>
    <string name="advise_a_student_email_address">help@example.edu</string>

    <string name="calendar_url">http://www.cpsscifair.org/Current/current.html</string>
    <string name="exhibit_categories_url">http://www.cpsscifair.org/Main/categories1.html</string>
    <string name="safety_guidelines_url">http://www.cpsscifair.org/Student/stu-safety.html</string>

    <string name="feedback_email_address">feedback@example.edu</string>
    <string name="feedback_subject">SSF Companion Feedback</string>
    <string name="feedback_body">Leave your feedback here, and I\'ll get back to you as soon as I can.</string>

    <string name="app_github_url">https://github.com/mileskrell/SSFCompanion</string>

    <!--Nav drawer items-->
    <string name="home">Home</string>
    <string name="checklist">Checklist</string>
    <string name="unit_converter">Unit converter</string>
    <string name="advise_a_student_program">Advise-A-Student Program</string>

    <string name="links">Links</string>
    <string name="calendar">Calendar</string>
    <string name="exhibit_categories">Exhibit categories</string>
    <string name="safety_guidelines">Safety guidelines</string>

    <string name="about_this_app">About this app</string>
    <string name="send_feedback">Send feedback</string>
    <string name="view_the_code_on_github">View the code on Github</string>

    <!--Home page-->
    <string name="student_science_fair_logo">Student Science Fair logo</string>
    <string name="ssf_date">March 15 - March 18, 2018</string>
    <string name="sponsor_message">The CPS Student Science Fair is made possible by a number of sponsors.\n\nTap a sponsor\'s logo to learn more about them.</string>

    <string name="visit_chicago_public_schools_student_science_fair_inc_website">Visit Chicago Public Schools Student Science Fair, Inc website</string>
    <string name="visit_chicago_public_schools_website">Visit Chicago Public Schools website</string>
    <string name="visit_museum_of_science_and_industry_website">Visit Museum of Science and Industry website</string>
    <string name="visit_takeda_website">Visit Takeda website</string>
    <string name="visit_bp_website">Visit BP website</string>
    <string name="visit_comed_website">Visit ComEd website</string>
    <string name="visit_motorola_solutions_foundation_website">Visit Motorola Solutions Foundation website</string>
    <string name="visit_peoples_gas_website">Visit Peoples Gas website</string>

    <!--Checklist page-->
    <string name="default_checklist_items">
        [{\"checked\":false,\"text\":\"To add a new item, tap the button in the bottom-right corner.\"},
         {\"checked\":false,\"text\":\"Tap an item to edit it.\"},
         {\"checked\":false,\"text\":\"To remove an item, swipe it to the side.\"},
         {\"checked\":false,\"text\":\"To move an item, tap and hold, then drag up or down.\"},
         {\"checked\":false,\"text\":\"To mark an item as done, tap the item\'s check box.\"},
         {\"checked\":false,\"text\":\"All changes are saved automatically.\"}]
    </string>

    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>

    <string name="item_removed">Item removed</string>
    <string name="undo">Undo</string>

    <!--Advise-A-Student page-->
    <string name="beginning_condition">I am at the beginning stage of my science fair project. I need help in scientifically planning and carrying out my research. My science teacher cannot provide this help.</string>
    <string name="intermediate_condition">I am at the intermediate stage of my science fair project. I have gone to local libraries and done some experimentation. I need help in improving my experiment and getting more information.</string>
    <string name="advanced_condition">I am at the advanced stage of my science fair project. I have done extensive experimentation and research. I need help in obtaining and understanding advanced, technical information on my topic and in improving my experiment.</string>

    <string name="get_help_with_your_project">Get help with your project</string>
    <string name="please_select_an_option_first">Please select an option first</string>

    <!--Unit converter page-->
    <string name="select_first_unit">Select first unit</string>
    <string name="select_second_unit">Select second unit</string>
    <string name="enter_units">Enter %s</string>

    <!--Categories-->
    <string name="distance">Distance</string>
    <string name="mass">Mass</string>
    <string name="temperature">Temperature</string>
    <string name="volume">Volume</string>

    <!--
    Since I don't plan for this to be translated to anything more than
    Spanish and Polish (if that), the translation rules are pretty simple.
    Thankfully, none of the units are ever used in the singular.
    -->

    <!--Distance-->
    <string name="inches">Inches</string>
    <string name="feet">Feet</string>
    <string name="yards">Yards</string>
    <string name="miles">Miles</string>
    <string name="millimeters">Millimeters</string>
    <string name="centimeters">Centimeters</string>
    <string name="meters">Meters</string>
    <string name="kilometers">Kilometers</string>

    <string name="inches_abbr">in</string>
    <string name="feet_abbr">ft</string>
    <string name="yards_abbr">yd</string>
    <string name="miles_abbr">mi</string>
    <string name="millimeters_abbr">mm</string>
    <string name="centimeters_abbr">cm</string>
    <string name="meters_abbr">m</string>
    <string name="kilometers_abbr">km</string>

    <!--Mass-->
    <string name="ounces">Ounces</string>
    <string name="pounds">Pounds</string>
    <string name="milligrams">Milligrams</string>
    <string name="grams">Grams</string>
    <string name="kilograms">Kilograms</string>

    <string name="ounces_abbr">oz</string>
    <string name="pounds_abbr">lb</string>
    <string name="milligrams_abbr">mg</string>
    <string name="grams_abbr">g</string>
    <string name="kilograms_abbr">kg</string>

    <!--Temperature-->
    <string name="degrees_fahrenheit">Degrees Fahrenheit</string>
    <string name="degrees_celsius">Degrees Celsius</string>
    <string name="degrees_kelvin">Degrees Kelvin</string>

    <string name="degrees_fahrenheit_abbr">°F</string>
    <string name="degrees_celsius_abbr">°C</string>
    <string name="degrees_kelvin_abbr">°K</string>

    <!--Volume-->
    <string name="teaspoons">Teaspoons</string>
    <string name="tablespoons">Tablespoons</string>
    <string name="fluid_ounces">Fluid ounces</string>
    <string name="cups">Cups</string>
    <string name="pints">Pints</string>
    <string name="quarts">Quarts</string>
    <string name="gallons">Gallons</string>
    <string name="milliliters">Milliliters</string>
    <string name="liters">Liters</string>

    <string name="teaspoons_abbr">tsp</string>
    <string name="tablespoons_abbr">tbsp</string>
    <string name="fluid_ounces_abbr">fl oz</string>
    <string name="cups_abbr">c</string>
    <string name="pints_abbr">pt</string>
    <string name="quarts_abbr">qt</string>
    <string name="gallons_abbr">gal</string>
    <string name="milliliters_abbr">ml</string>
    <string name="liters_abbr">l</string>
</resources>
