<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/distance"
        android:id="@+id/menu_primary_id_distance">
        <menu>
            <item android:title="@string/inches" />
            <item android:title="@string/feet" />
            <item android:title="@string/yards" />
            <item android:title="@string/miles" />
            <item android:title="@string/millimeters" />
            <item android:title="@string/centimeters" />
            <item android:title="@string/meters" />
            <item android:title="@string/kilometers" />
        </menu>
    </item>

    <item
        android:title="@string/mass"
        android:id="@+id/menu_primary_id_mass">
        <menu>
            <item android:title="@string/ounces" />
            <item android:title="@string/pounds" />
            <item android:title="@string/milligrams" />
            <item android:title="@string/grams" />
            <item android:title="@string/kilograms" />
        </menu>
    </item>

    <item
        android:title="@string/temperature"
        android:id="@+id/menu_primary_id_temperature">
        <menu>
            <item android:title="@string/degrees_fahrenheit" />
            <item android:title="@string/degrees_celsius" />
            <item android:title="@string/degrees_kelvin" />
        </menu>
    </item>

    <item
        android:title="@string/volume"
        android:id="@+id/menu_primary_id_volume">
        <menu>
            <item android:title="@string/teaspoons" />
            <item android:title="@string/tablespoons" />
            <item android:title="@string/fluid_ounces" />
            <item android:title="@string/cups" />
            <item android:title="@string/pints" />
            <item android:title="@string/quarts" />
            <item android:title="@string/gallons" />
            <item android:title="@string/milliliters" />
            <item android:title="@string/liters" />
        </menu>
    </item>
</menu>
