<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/inches"
        android:id="@+id/menu_distance_inches" />
    <item
        android:title="@string/feet"
        android:id="@+id/menu_distance_feet" />
    <item
        android:title="@string/yards"
        android:id="@+id/menu_distance_yards" />
    <item
        android:title="@string/miles"
        android:id="@+id/menu_distance_miles" />
    <item
        android:title="@string/millimeters"
        android:id="@+id/menu_distance_millimeters" />
    <item
        android:title="@string/centimeters"
        android:id="@+id/menu_distance_centimeter" />
    <item
        android:title="@string/meters"
        android:id="@+id/menu_distance_meter" />
    <item
        android:title="@string/kilometers"
        android:id="@+id/menu_distance_kilometer" />
</menu>
