<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.cpsscifair.ssfcompanion.UnitConverterFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="48dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/ic_measure_ruler"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:text="@string/distance"
                    android:id="@+id/text_view_distance" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/ic_measure_weight"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:text="@string/mass"
                    android:id="@+id/text_view_mass" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/ic_measure_thermometer"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:text="@string/temperature"
                    android:id="@+id/text_view_temperature" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/ic_measure_cup"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:text="@string/volume"
                    android:id="@+id/text_view_volume" />
            </LinearLayout>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:visibility="invisible"
                android:id="@+id/spinner_primary" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:visibility="invisible"
                android:id="@+id/spinner_secondary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    tools:ignore="TextFields"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:id="@+id/edit_text_input" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:labelFor="@id/edit_text_input"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:visibility="invisible"
                    android:id="@+id/unit_display_input" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:visibility="invisible"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textAlignment="center"
                android:id="@+id/text_view_output" />
        </LinearLayout>
    </ScrollView>
</layout>
